# ggml-mf-luna

./: .gitignore  CMakeLists.txt  README.md  embedding_cpp.txt  embedding_demo  embedding_py.txt  formula_debug.txt  model  model_weights.json  output_cpp.json  requirements.txt  run_benchmark.sh  simple-build.sh
code/: compare_embeddings.py  config.cpp  config.h  embedding.cpp  embedding.h  embedding.py  embedding_pipeline.cpp  formula.cpp  model.cpp  output.json  rms_norm.cpp  rms_norm.h  test.cpp  token_test.cpp  tokenizer.cpp  tokenizer.h  tokenizer.py  tokenizer_lib.cpp  tokenizer_test.cpp
examples/: ggml_mat_mul.cpp
media/: run.c
results/: compare_results.py  cpp_tokenizer_results.csv  output.txt  output_cpp.json  py_tokenizer_results.csv
